k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template: 
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: asia-south1-docker.pkg.dev/project-06cede75-fb8e-4bfb-984/repo-app/app-image@sha256:6c02e66ab5fac4b277415f3b97302785cb0140b1409b5800d4a7e1513e6fa754
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
