k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
